Docs site: Comet-style layout and navigation
Add a stock-Jekyll theme under docs/ (no plugins, no CI changes): a top
navigation bar with the project name/logo, top links and a GitHub repo icon,
a left sidebar organised into Overview / User guide / Benchmarks sections, a
right-hand on-this-page TOC with scroll-spy, clean typography, a light theme
with an optional dark toggle, and a responsive collapsing sidebar.

- _config.yml (baseurl /spark-vector, nav tree), _layouts/default.html,
  _includes/{header,sidebar,footer}.html, assets/css/site.css,
  assets/js/site.js, assets/favicon.svg.
- Add front matter to every content page; expand index.md into an overview
  landing page reusing README facts.
- Rewrite internal .md cross-links to .html so they resolve on Pages.
- Benchmark pages under docs/benchmarks/ are left verbatim (self-contained
  HTML, no front matter) so render-benchmark-page.py stays compatible.